@@ -1,4 +1,8 @@
 
+2014-03-06 Martin Grunewald  <Martin.Grunewald@cern.ch>
+	* tag V01-07-10
+	* Fix bug in displaying unresolved InputTags in the GUI panels
+
 2014-02-26 Martin Grunewald  <Martin.Grunewald@cern.ch>
 	* tag V01-07-09
 	* add more JavaCode execution
